[gd_scene load_steps=9 format=3 uid="uid://686ef6jcvfk3"]

[ext_resource type="Theme" uid="uid://bp7ntkss4y7ms" path="res://scenes/theme.tres" id="1_611gt"]
[ext_resource type="Script" path="res://scenes/popups/resize_canvas_popup.gd" id="2_qsco1"]
[ext_resource type="Texture2D" uid="uid://dsd44oh4tuyog" path="res://icons/phosphor/align-left-simple-duotone.svg" id="3_rfqlm"]
[ext_resource type="Texture2D" uid="uid://dm68yfk5qlav1" path="res://icons/phosphor/align-center-horizontal-simple-duotone.svg" id="4_wj8qi"]
[ext_resource type="Texture2D" uid="uid://bwpgqpo0fqn2o" path="res://icons/phosphor/align-right-simple-duotone.svg" id="5_t4u5d"]
[ext_resource type="Texture2D" uid="uid://dsfvtog4sov5o" path="res://icons/phosphor/align-top-simple-duotone.svg" id="6_34ejp"]
[ext_resource type="Texture2D" uid="uid://xqrryehmnae3" path="res://icons/phosphor/align-center-vertical-simple-duotone.svg" id="7_60xlc"]
[ext_resource type="Texture2D" uid="uid://dn3i3egs5hatq" path="res://icons/phosphor/align-bottom-simple-duotone.svg" id="8_rygop"]

[node name="ResizeCanvasPopup" type="Window"]
title = "Resize Canvas"
initial_position = 2
size = Vector2i(268, 197)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
popup_window = true
theme = ExtResource("1_611gt")
script = ExtResource("2_qsco1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 3

[node name="WidthLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Width:"
horizontal_alignment = 2

[node name="Width" type="SpinBox" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 16384.0
rounded = true
update_on_text_changed = true

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="HeightLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Height:"
horizontal_alignment = 2

[node name="Height" type="SpinBox" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 16384.0
rounded = true
update_on_text_changed = true

[node name="Spacer2" type="Control" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="XOffsetLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "X Offset:"
horizontal_alignment = 2

[node name="XOffset" type="SpinBox" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
update_on_text_changed = true

[node name="HAlignButtons" type="HBoxContainer" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer/GridContainer/HAlignButtons"]
layout_mode = 2

[node name="AlignLeft" type="Button" parent="VBoxContainer/MarginContainer/GridContainer/HAlignButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Snap to left edge"
focus_mode = 0
theme_type_variation = &"IconButton"
icon = ExtResource("3_rfqlm")

[node name="AlignCenterH" type="Button" parent="VBoxContainer/MarginContainer/GridContainer/HAlignButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Center horizontally"
focus_mode = 0
theme_type_variation = &"IconButton"
icon = ExtResource("4_wj8qi")

[node name="AlignRight" type="Button" parent="VBoxContainer/MarginContainer/GridContainer/HAlignButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Snap to right edge"
focus_mode = 0
theme_type_variation = &"IconButton"
icon = ExtResource("5_t4u5d")

[node name="YOffsetLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Y Offset:"
horizontal_alignment = 2

[node name="YOffset" type="SpinBox" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
update_on_text_changed = true

[node name="VAlignButtons" type="HBoxContainer" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer/GridContainer/VAlignButtons"]
layout_mode = 2

[node name="AlignTop" type="Button" parent="VBoxContainer/MarginContainer/GridContainer/VAlignButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Snap to top edge"
focus_mode = 0
theme_type_variation = &"IconButton"
icon = ExtResource("6_34ejp")

[node name="AlignCenterV" type="Button" parent="VBoxContainer/MarginContainer/GridContainer/VAlignButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Center vertically"
focus_mode = 0
theme_type_variation = &"IconButton"
icon = ExtResource("7_60xlc")

[node name="AlignBottom" type="Button" parent="VBoxContainer/MarginContainer/GridContainer/VAlignButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Snap to bottom edge"
focus_mode = 0
theme_type_variation = &"IconButton"
icon = ExtResource("8_rygop")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Resize" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Resize"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/GridContainer/Width" to="." method="_on_width_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/GridContainer/Height" to="." method="_on_height_value_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/HAlignButtons/AlignLeft" to="." method="_on_align_left_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/HAlignButtons/AlignCenterH" to="." method="_on_align_center_h_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/HAlignButtons/AlignRight" to="." method="_on_align_right_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/VAlignButtons/AlignTop" to="." method="_on_align_top_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/VAlignButtons/AlignCenterV" to="." method="_on_align_center_v_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/VAlignButtons/AlignBottom" to="." method="_on_align_bottom_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/Cancel" to="." method="hide"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/Resize" to="." method="_on_resize_pressed"]
